--- a/6_rem适配/2_rem适配_方案一.html
+++ b/6_rem适配/2_rem适配_方案一.html
@@ -15,8 +15,8 @@
 				margin: 0 auto;
 				margin-top: 0.15rem;
 				background-color: #87CEEB;
-				border: 0.01rem solid black;
-				/* border: 1px solid black; */
+				border: 0.01rem solid black;	/* 边框参与适配*/
+				/* border: 1px solid black; */  /* 边框不参与适配*/
 			}
 		</style>
 	</head>
